# global-hotkey

./: CHANGELOG.md  Cargo.toml
.changes/: media-keys.md  media-track-prev-typo.md  panic-key.md  send-sync.md  serde.md  to_string.md  use-objc2.md  windows-sys-0.59.md  x11-pending-events-buildup.md
.github/workflows/: covector-version-or-publish.yml  test.yml
examples/: iced.rs
src/: error.rs  hotkey.rs  lib.rs
src/platform_impl/macos/: ffi.rs  mod.rs
src/platform_impl/windows/: mod.rs
src/platform_impl/x11/: mod.rs
